--- a/cn/index.html
+++ b/cn/index.html
@@ -638,6 +638,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             <!--END 虚拟化管理 -->
             <br />
             <!-- 对外发布 -->
