--- a/cn/index.html
+++ b/cn/index.html
@@ -183,7 +183,7 @@
 
 
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.24/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://wechat.evling.tech/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.24/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://10.10.1.24/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://5ddd.com/fnosforxun/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://wechat.evling.tech/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://5ddd.com/fnosforxun/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://5ddd.com/fnosforxun/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
@@ -396,7 +396,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="安全管理"></i>安全管理</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.10/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://jms.evling.tech/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.10/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://10.10.1.10/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-jumpserver.png" class="lozad img-circle" width="40">
@@ -537,7 +537,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="通讯影音"></i>通讯影音</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://jellyfin.wdxunxun.top/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://jellyfin.evling.tech/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://jellyfin.wdxunxun.top/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://jellyfin.wdxunxun.top/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-jellyfin.ico" class="lozad img-circle" width="40">
@@ -552,7 +552,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://ichat.wdxunxun.top/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://ichat.evling.tech/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://ichat.wdxunxun.top/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://ichat.wdxunxun.top/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-rocketchat.png" class="lozad img-circle" width="40">
@@ -573,7 +573,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="网关路由"></i>网关路由</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://192.168.1.1/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://vnet.evling.tech/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://192.168.1.1/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://192.168.1.1/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-openwrt.png" class="lozad img-circle" width="40">
