--- a/cn/index.html
+++ b/cn/index.html
@@ -87,6 +87,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="#内网界面" class="smooth">
+                            <i class="linecons-diamond1"></i>
+                            <span class="title">内网界面</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="#文件管理" class="smooth">
                             <i class="linecons-doc"></i>
                             <span class="title">文件管理</span>
@@ -326,6 +332,30 @@
             </div>
             <br />
             <!-- END 数据管理 -->
+            <!-- 内网界面 -->
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="内网界面"></i>内网界面</h4>
+            <div class="row">
+
+
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.24:8082/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://10.10.1.24:8082/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>talebook</strong>
+                                </a>
+                                <p class="overflowClip_3">talebook</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <br />
+            <!-- END 内网界面 -->
             <!-- 文件管理 -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="文件管理"></i>文件管理</h4>
             <div class="row">
