--- a/cn/index.html
+++ b/cn/index.html
@@ -338,7 +338,7 @@
 
 
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.24:8082/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://10.10.1.24:8082/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://10.10.1.24:8082/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://10.10.1.24:8082/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
