--- a/cn/index.html
+++ b/cn/index.html
@@ -189,7 +189,7 @@
 
 
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://10.10.1.24/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://10.10.1.24/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://10.10.1.24/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://10.10.1.24/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
@@ -348,6 +348,70 @@
                                     <strong>talebook</strong>
                                 </a>
                                 <p class="overflowClip_3">talebook</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://10.10.1.24:4533/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://10.10.1.24:4533/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>navidrome</strong>
+                                </a>
+                                <p class="overflowClip_3">navidrome</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://10.10.1.24:2345/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://10.10.1.24:2345/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>迅雷</strong>
+                                </a>
+                                <p class="overflowClip_3">迅雷</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://10.10.1.24:8085/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://10.10.1.24:8085/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>qBittorrent</strong>
+                                </a>
+                                <p class="overflowClip_3">qBittorrent</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://10.10.1.24:15700/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://10.10.1.24:15700/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/evling-wechat.ico" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>青龙面板</strong>
+                                </a>
+                                <p class="overflowClip_3">青龙面板</p>
                             </div>
                         </div>
                     </div>
